src/log/build_2022-06-01_20-19-48/python_publisher/stderr.log
  File "/home/kcg/ROS2Sample/src/install/python_publisher/lib/python3.8/site-packages/python_publisher/adaptive_cruise_control.py", line 184
    Y Control
      ^
SyntaxError: invalid syntax

